Added neurmorphic styles on portfolio filter buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -24,17 +25,18 @@
     <div id="portfolio"> 
         <div class="scroll-container">
             <a href ="#top" class="scroll-up">
-                <img src="images/arrow.png" id="arrow" alt="">
+                <i class="fas fa-chevron-up"></i>
             </a>
         </div>    
+        
         <div class="filter-bar">
             <div class="filter-label">Filter by:</div>
-            <a href="#" data-filter="all" class="button active">All</a>
-            <a href="#" data-filter="portrait" class="button">Portraiture</a>
-            <a href="#" data-filter="product" class="button">Product</a>
-            <a href="#" data-filter="travel" class="button">Travel</a>
-            <a href="#" data-filter="climbing" class="button">Climbing</a>
-            <a href="#" data-filter="film" class="button">Film</a>
+            <a href="#" data-filter="all" class="button active"><span>All</span></a>
+            <a href="#" data-filter="portrait" class="button"><span>Portraiture</span></a>
+            <a href="#" data-filter="product" class="button"><span>Product</span></a>
+            <a href="#" data-filter="travel" class="button"><span>Travel</span></a>
+            <a href="#" data-filter="climbing" class="button"><span>Climbing</span></a>
+            <a href="#" data-filter="film" class="button"><span>Film</span></a>
         </div>
 
         <div class="image-container">
