Consolidated all CSS files into main.css to reduce http requests

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div id="about"> <!-- About -->
-        <div class="about-container">
+        <div class="container">
          <!-- <div class="about-header">Who is Chelsea Jan</div> -->
             <div class="half left">
                 <h2>+ The Short</h2>
@@ -45,10 +45,10 @@
         </div>         
     </div> <!-- end of About -->
 
-    <!-- <footer>
+    <footer>
         <a href="https://www.linkedin.com/in/chelseajan/">LinkedIn</a>
         <a href="https://github.com/chelseajan">Github</a>
-    </footer> -->
+    </footer>
 </body>
 </html>
 
