--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles/contact.css">
-    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
@@ -16,13 +15,34 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </div> 
-    <div id="contact">
-        <div class="container">
+    <div id="contact-area">
+        <div class="contact-container">
+            <div class="test">
+                
+                <div class="contact-text">Get in Touch</div>
+
+                <div class="contact-section">
+                    <div class="input-label">Name *</div>
+                    <input type="text" value="real names, please :) ">
+                </div>
+                <div class="contact-section">
+                    <div class="input-label">Email Address *</div>
+                    <input type="text" value="Your email">
+                </div>
+                <div class="contact-section">
+                    <div class="input-label">Subject *</div>
+                    <input type="text" value="">
+                </div>
+                <div class="contact-section">
+                    <div class="input-label">Message *</div>
+                    <input class="message-box" type="text" value="">
+                </div>
+                <div class="submit-area">
+                    <button class="submit">HIGH FIVE</button>
+                </div>
+            </div>
         </div>
     </div>
-    
+</div>
 </body>
-
-<script src="js/.js"></script>
-
 </html>
