--- a/home.html
+++ b/home.html
@@ -36,10 +36,10 @@
                     in clinical spaces by advancing existing outdated technology, I pursued my B.S. in Bioengineering (Electrical Engineering track) from the University of California, San Diego, where I published my first research publication in cardiovascular image processing, raced competitively
                     in collegiate road cycling, and drank too many cups of coffee to count. My favorite subjects from school were in Digital Signal Processing, Medical Instrumentation, Non-linear Modeling, and surprisingly &ndash; Acting. Yes, I'm a huge nerd. 
                     
-                    <br><br>For 40 hours/week, I'm a Software Engineer within Product Development at <a href="https://www.illumina.com/">Illumina</a>, where I develop E2E workflows on customer-facing desktop applications used to 
+                    <br><br>For 40 hours/week, I'm a Software Engineer within Product Development at <a href="https://www.illumina.com/">Illumina</a>, where I design solutions for our  customer-facing desktop applications used to 
                     operate, generate, and analyze bioinformatics data from the sequencers. I'm also currently working on a Front-End Development Certification course through UC San Diego Extension.
                     
-                    <br><br>Nothing is more satifying to me than anticipating and capturing the perfect shot. Because of photography, I've traveled to new places, saved important memories, met other inspiring photographers, and learned to better understand human emotion. I am currently working on, what will be, my first self-published landscape photography book. 
+                    <br><br>Nothing is more satifying to me than anticipating and capturing the perfect shot. Because of photography, I've traveled to new places, saved important memories, met other inspiring photographers, and (most importantly) learned to better understand human emotion. I am currently working on, what will be, my first self-published landscape photography book. 
                 </div>
             </div>  
         </div>         
