Updated html to coordinate with main.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div id="about"> <!-- About -->
-        <div class="container">
+        <div class="about-container">
          <!-- <div class="about-header">Who is Chelsea Jan</div> -->
             <div class="half left">
                 <h2>+ The Short</h2>
