--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <div class="navbar">
         <a href="home.html" class="logo">CJ</a>
         <ul class="nav">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="home.html#about">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#about">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
