Bug fix: image incorrectly labeled with filtered class

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
             <div class="filter portrait climbing">
                 <img src="images/jeff.jpg" alt="">
             </div>
-            <div class="travel travel film">
+            <div class="filter film">
                 <img src="images/roadtrip.jpg" alt="">
             </div>
             <div class="filter travel">
@@ -131,9 +131,15 @@
                 <img src="images/pies2.jpg" alt="">
             </div>
 
-            <div class="filter portrait">
-                <img src="images/tk.jpg" alt="">
+
+            <div class="filter travel">
+                <img src="images/abq2.jpg" alt="">
             </div>
+
+
+
+
+
             <div class="filter climbing">
                 <img src="images/jeff2.jpg" alt="">
             </div>
@@ -171,9 +177,13 @@
             <div class="filter portrait">
                 <img src="images/euan.jpg" alt="">
             </div>
-            <div class="filter travel">
-                <img src="images/abq2.jpg" alt="">
+            <div class="filter portrait">
+                <img src="images/tk.jpg" alt="">
             </div>
+
+
+
+
             <div class="filter travel">
                 <img src="images/balloons2.jpg" alt="">
             </div>
