--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Chelsea Jan - Home</title>
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
 </head>
 
 <body>
@@ -23,32 +25,35 @@
 
     <div id="about"> <!-- About -->
         <div class="about-container">
-         <!-- <div class="about-header">Who is Chelsea Jan</div> -->
-            <div class="half left">
+            <div class="section">
                 <h2>+ The Short</h2>
-                <div class="description">My name is Chelsea Jan, and I'm a photographer based in sunny San Diego, CA. My photography primarily ranges from product, portraiture, to landscape.
-                Some of my steadily-brewed passions include front-end development, photography, rock climbing, road cycling, and yoga.
+                <div class="description">Based in sunny San Diego, I am a photographer whose style ranges from portraiture, product, to landscape. I spend much of my free time steadily brewing my passions in front-end development, photography, rock climbing, road cycling, and yoga. <br><br>
+
+                Feel free to check out my work <a class="about-links" href="portfolio.html">here</a>!
                 </div>
             </div>
-            <div class="half right">
+            <div class="section">
                 <h2>+ The Long</h2>
-                <div class="description">                    
-                    I'm originally from the Bay Area, which means I was destined to be an engineer. With big aspirations to apply modern engineering design to healthcare, an industry that could really improve efficiency 
-                    in clinical spaces by advancing existing outdated technology, I pursued my B.S. in Bioengineering (Electrical Engineering track) from the University of California, San Diego, where I published my first research publication in cardiovascular image processing, raced competitively
-                    in collegiate road cycling, and drank too many cups of coffee to count. My favorite subjects from school were in Digital Signal Processing, Medical Instrumentation, Non-linear Modeling, and surprisingly &ndash; Acting. Yes, I'm a huge nerd. 
+                <div class="description">
+                    I always find it a little difficult in introducing myself because.. what do I say first? <br><br>
+
+                    I'm a photographer, a front end developer, a designer, and a goal-oriented student with insatiable and eclectic curiosity. Based in San Diego, I'm a Bay Area native with an atrophied adaptibility to colder temperatures. You can find projecting (or mostly falling off of) new routes at the rock climbing gym. You can find me up at 2am after a long work day learning how to implement the newest trends in front end development. You can find me frequenting my favorite bakery for freshly baked crossaints. You can find me behind the camera and impatiently waiting for photos to upload to my creative cloud account on Lightroom.<br><br> 
                     
-                    <br><br>For 40 hours/week, I'm a Software Engineer within Product Development at <a href="https://www.illumina.com/">Illumina</a>, where I develop E2E workflows on customer-facing desktop applications used to 
-                    operate, generate, and analyze bioinformatics data from the sequencers. I'm also currently working on a Front-End Development Certification course through UC San Diego Extension.
+                    To me, the experience as a photographer encompasses traveling to cool/new places, saving important snapshots in time, meeting other creatives, learning to better understand human emotion/behavior, and ultimately anticipating and captuing the perfect shot. I am currently working on, what will be, my first self-published landscape photography book. <br><br>
                     
-                    <br><br>Nothing is more satifying to me than anticipating and capturing the perfect shot. Because of photography, I've traveled to new places, saved important memories, met other inspiring photographers, and learned to better understand human emotion. I am currently working on, what will be, my first self-published landscape photography book. 
+                    A few years ago, I completed my B.S. in Bioengineering (Electrical Engineering track) from the University of California, San Diego, where I published my first research publication in cardiovascular image processing, raced competitively in collegiate road cycling, and drank too many cups of coffee to count. For 40 hours/week as a Software Engineer at Illumina, I drive the development of instrument software workflows used to operate, generate, and analyze bioinformatics data from the sequencers.
                 </div>
             </div>  
         </div>         
     </div> <!-- end of About -->
 
     <footer>
-        <a href="https://www.linkedin.com/in/chelseajan/">LinkedIn</a>
-        <a href="https://github.com/chelseajan">Github</a>
+        <div class="footer-link">
+            <a href="https://www.linkedin.com/in/chelseajan/"><i class="fab fa-linkedin"></i></a>
+        </div> 
+        <div class="footer-link">
+            <a href="https://github.com/chelseajan"><i class="fab fa-github-square"></i></a>
+        </div> 
     </footer>
 </body>
 </html>
