Added new image

--- a/portfolio.html
+++ b/portfolio.html
@@ -95,6 +95,9 @@
                 <img src="images/grad1.jpg" alt="">
             </div>
             <div class="filter travel">
+                <img src="images/montreal3.jpg" alt="">
+            </div>
+            <div class="filter travel">
                 <img src="images/plane.jpg" alt="">
             </div>
             <div class="filter travel">
