Updated to use semantic html

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <nav>
         <a href="home.html" class="logo">CJ</a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
@@ -15,7 +15,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div> 
+    </nav> 
     <div id="contact-area">
         <div class="contact-container">
             
