--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <nav>
         <a href="home.html" class="logo">CJ</a>
         <ul class="nav">
             <li><a href="#home">Home</a></li>
@@ -18,7 +18,7 @@
             <li><a href="contact.html">Contact</a></li>
 
         </ul>
-    </div> 
+    </nav> 
     <div id="home" class="banner-area">
         <div class="banner-text">the art of anticipation</div>
     </div>
@@ -37,7 +37,7 @@
                 <div class="description">
                     I always find it a little difficult in introducing myself because.. what do I say first? <br><br>
 
-                    I'm a photographer, a front end developer, a designer, and a goal-oriented student with insatiable and eclectic curiosity. Based in San Diego, I'm a Bay Area native with an atrophied adaptibility to colder temperatures. You can find projecting (or mostly falling off of) new routes at the rock climbing gym. You can find me up at 2am after a long work day learning how to implement the newest trends in front end development. You can find me frequenting my favorite bakery for freshly baked crossaints. You can find me behind the camera and impatiently waiting for photos to upload to my creative cloud account on Lightroom.<br><br> 
+                    I'm a photographer, a front end developer, a designer, and a goal-oriented student with insatiable and eclectic curiosity. Based in San Diego, I'm a Bay Area native with an atrophied adaptibility to colder temperatures. You can find projecting (or mostly falling off of) new routes at the rock climbing gym. You can find me awake at 2am resisting going to bed because I'm too excited to stop learning how to implement the newest trends in front end development. You can find me frequenting my favorite bakery for bread...because...carbs. You can find me behind the camera or impatiently waiting for photos to upload to my creative cloud account on Lightroom.<br><br> 
                     
                     To me, the experience as a photographer encompasses traveling to cool/new places, saving important snapshots in time, meeting other creatives, learning to better understand human emotion/behavior, and ultimately anticipating and captuing the perfect shot. I am currently working on, what will be, my first self-published landscape photography book. <br><br>
                     
@@ -47,15 +47,18 @@
         </div>         
     </div> <!-- end of About -->
 
-    <footer>
+    <!-- <footer>
         <div class="footer-link">
             <a href="https://www.linkedin.com/in/chelseajan/"><i class="fab fa-linkedin"></i></a>
         </div> 
         <div class="footer-link">
             <a href="https://github.com/chelseajan"><i class="fab fa-github-square"></i></a>
         </div> 
-    </footer>
+    </footer> -->
+
 </body>
+<script src="js/nav.js"></script>
+
 </html>
 
 
