--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <!-- scroll to top -->
     <a id="top"></a>
     
-    <div class="navbar">
+    <nav>
         <a href="home.html" class="logo">CJ</a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
@@ -20,7 +20,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div> 
+    </nav> 
     <div id="portfolio"> 
         <div class="scroll-container">
             <a href ="#top" class="scroll-up">
